# asxReporting

./: README.md  hugo.yaml  pyproject.toml
.github/workflows/: site.yaml
archive/: old-pyrightconfig.json
assets/: shell.nix
assets/scripts/: company_directoy.py  company_financials.py  price_history.py
assets/scripts/data/: companies.csv  company_directory.csv  overview.json  result.html  syms.json
assets/scripts/data/histories/: 10X.AX_hist.json  10X.AX_plot.json  14D.AX_hist.json  14D.AX_plot.json  1AD.AX_hist.json  1AD.AX_plot.json  1AE.AX_hist.json  1AE.AX_plot.json  1AI.AX_hist.json  1AI.AX_plot.json  1CG.AX_hist.json  1CG.AX_plot.json  1MC.AX_hist.json  1MC.AX_plot.json  1TT.AX_hist.json  1TT.AX_plot.json  29M.AX_hist.json  29M.AX_plot.json  360.AX_hist.json  360.AX_plot.json  3DA.AX_hist.json  3DA.AX_plot.json  3DADA.AX_hist.json  3DADA.AX_plot.json  3DP.AX_hist.json  3DP.AX_plot.json  3PL.AX_hist.json  3PL.AX_plot.json  49M.AX_hist.json  49M.AX_plot.json  4DS.AX_hist.json  4DS.AX_plot.json  4DX.AX_hist.json  4DX.AX_plot.json  5EA.AX_hist.json  5EA.AX_plot.json  5GG.AX_hist.json  5GG.AX_plot.json  5GN.AX_hist.json  5GN.AX_plot.json  (+3990 more)
content/: _index.md  contact.md  overview.md
layouts/partials/: footer.html  header.html
layouts/shortcodes/: csv-to-table.html  render-html.html  render-plotly.html
static/css/: style.css
static/js/: script.js
